# altra-app

./: README.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  db.py  deps.py  main.py  models.py  schemas.py
backend/app/routers/: kb.py  tickets.py
backend/app/services/: glpi.py  graph.py  graph_token.py  notify.py  storage.py
deploy/: docker-compose.yaml  docker-compose.yml
deploy/nginx/: default.conf
ops/: cifs-fstab-example.txt
